--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,23 +12,25 @@ source:
 build:
   noarch: python
   number: 0
-  script: {{ PYTHON }} -m pip install . -vv
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
 
 requirements:
   host:
-    - python >=3.7
+    - hatchling >=1.5.0
+    - hatch-jupyter-builder >=0.5
+    - hatch-nodejs-version
+    - jupyterlab >=4.0.0,<5
     - pip
-    - jupyterlab >=3.1.0,<4.0.0
-    - jupyter-packaging >=0.10.0,<2.0.0
+    - python >=3.8
   run:
-    - python >=3.7
+    - python >=3.8
 
 test:
   requires:
-    - jupyterlab >=3.0.0,<4.0.0
+    - jupyterlab >=4.0.0,<5
   commands:
     - jupyter labextension list 2>&1 | grep -ie "@jlab-enhanced/recents.*OK"
-    - python -m jupyterlab.browser_check  # [not linux]
+    - python -m jupyterlab.browser_check --no-browser-test # [not linux]
 
 about:
   home: https://github.com/jupyterlab-contrib/jupyterlab-recents
